--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Google Chat",
   "main": "main.js",
   "author": "Anwar",
@@ -16,12 +16,15 @@
     "productName": "GoogleChat",
     "win": {
       "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
     }
   },
   "devDependencies": {
+    "electron": "^24.4.0",
     "electron-builder": "^23.6.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "electron": "^24.4.0"
+    "electron-squirrel-startup": "^1.0.0"
   },
   "dependencies": {
   }
