--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
-      - name: Install Snapcraft
-        uses: samuelmeuli/action-snapcraft@v1
-        # Only install Snapcraft on Ubuntu
-        if: startsWith(matrix.os, 'ubuntu')
+
+      - name: Install rpm
+        run: sudo apt-get update && sudo apt-get install rpm
+        if: matrix.os == 'ubuntu-latest'
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
