--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "Other"
   ],
   "author": {
-    "name": "Anwar",
+    "name": "Anwar Hossain",
     "email": "anwar.hossain@dsinnovators.com"
   },
   "homepage": "https://github.com/anwar3606/google-chat-webapp",
