--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat",
-  "version": "1.0.19",
+  "version": "1.0.17",
   "description": "Google Chat",
   "main": "main.js",
   "categories": [
@@ -22,7 +22,9 @@
     "appId": "com.anwarh.googlechat",
     "productName": "Chat",
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "artifactName": "Google Chat Setup ${version}.${ext}",
+      "verifyUpdateCodeSignature": false
     },
     "linux": {
       "target": [
@@ -38,5 +40,7 @@
     "electron-squirrel-startup": "^1.0.0"
   },
   "dependencies": {
+    "electron-log": "^5.0.0-beta.24",
+    "electron-updater": "^5.3.0"
   }
 }
