--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat",
-  "version": "1.0.25",
+  "version": "1.1.0",
   "description": "Google Chat",
   "main": "main.js",
   "categories": [
@@ -44,6 +44,7 @@
     "electron-squirrel-startup": "^1.0.0"
   },
   "dependencies": {
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "sharp": "^0.32.1"
   }
 }
