Notification counter fix

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "verifyUpdateCodeSignature": false
     },
     "linux": {
+      "executableName": "Google Chat",
       "target": [
         "AppImage",
         "deb",
